##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am 295 2009-02-25 13:32:25Z awalther $
##
## Copyright (C) Andrea Walther, Andreas Kowarz
##
## This file is part of ADOL-C. This software is provided as open source.
## Any use, reproduction, or distribution of the software constitutes 
## recipient's acceptance of the terms of the accompanying license file.
## 
##############################################################################

MAINTAINERCLEANFILES = Makefile.in *.aux *.dvi *.log *.toc *~ *.orig \
                       adolc-*.pdf adolc-*.ps

EXTRA_DIST           = adolc-20.ps adolc-20.pdf short_ref.ps short_ref.pdf
